Closed Bug 331430 Opened 18 years ago Closed 18 years ago

new pop-up blocker shifts scrollbars down

Categories

(Camino Graveyard :: Toolbars & Menus, defect, P3)

PowerPC
macOS

Tracking

(Not tracked)

RESOLVED FIXED
Camino1.5

People

(Reporter: ender.mb, Assigned: hwaara)

References

()

Details

(Keywords: fixed1.8.1, polish, regression)

Attachments

(2 files)

User-Agent:       Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.0.1) Gecko/20060111 Firefox/1.5.0.1
Build Identifier: Camino 2006032100 (1.2+)

When the new popup blocked notification appears, it shifts the scrollbars for the page view down and underneath the status bar. Switching tabs will cause them to return most of the way to their proper positions, but not quite. Screenshot forthcoming.

Reproducible: Always

Steps to Reproduce:
Attached image screenshot
observe the chopped-off scroll buttons
Yep :-(
Severity: normal → minor
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: polish
Target Milestone: --- → Camino1.1
Mike, this is one of 2 regressions from the new pop-up notification bar.
Keywords: regression
Priority: -- → P3
Attached patch FixSplinter Review
Attachment #221332 - Flags: superreview?(mikepinkerton)
This also fixes bug 331913
Comment on attachment 221332 [details] [diff] [review]
Fix

sr=pink
Attachment #221332 - Flags: superreview?(mikepinkerton) → superreview+
Assignee: mikepinkerton → hwaara
Whiteboard: [needs checkin]
Fixed on trunk & branch.
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
Whiteboard: [needs checkin]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: