fix bug 331430, new pop-up blocker shifts scrollbar down. also fixes bug 331913, highlighted text for a scrolling find is below viewport when popup blocker is open. sr=pink